--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <main>
     <p>Lorem ipsum dolor sit amet.</p>
     <img src="images/logo.svg" alt="">
-    <a href="https://www.wikipedia.org">wikipedia</a>
+    <a href="https://www.wikipedia.org">Wikipedia</a>
     </main>
+
 
   </body>
   </html>
